Added keycloak configuration
