# main.go
@@ -1,3 +1,7 @@
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and your token.
 package main
 
 import (
@@ -8,11 +12,11 @@ import (
 	integrationordercreatedeventhandlers "ORDERING-API/application/usecases/orders/integrationevents/ordercreated"
 	integrationorderupdatedeventhandlers "ORDERING-API/application/usecases/orders/integrationevents/orderupdated"
 	getorderbyid "ORDERING-API/application/usecases/orders/queries/getorderbyid"
+	"ORDERING-API/infrastructure/auth"
 	"ORDERING-API/infrastructure/eventdispatcher"
 	"ORDERING-API/infrastructure/mq"
 	"ORDERING-API/infrastructure/persistence"
 	"ORDERING-API/presentation/controllers"
-
 	"database/sql"
 	"fmt"
 	"log"
@@ -98,14 +102,30 @@ func main() {
 	// Initialize controller
 	orderController := controllers.NewOrderController(createOrderHandler, getOrderHandler, updateOrderHandler)
 
+	// Keycloak
+	authController := controllers.NewAuthController("http://localhost:7080")
+
+	keycloakMiddleware, err := auth.NewKeycloakMiddleware("http://localhost:7080/realms/agogo", "agogo-client")
+	if err != nil {
+		log.Fatalf("Failed to initialize Keycloak middleware: %v", err)
+	}
+
 	// Initialize Gin router
 	r := gin.Default()
 
 	// API routes
-	r.POST("/orders", orderController.CreateOrder)
-	r.PUT("/orders", orderController.UpdateOrder)
-	r.GET("/orders", orderController.GetOrder)
+	//r.POST("/orders", orderController.CreateOrder)
+	//r.PUT("/orders", orderController.UpdateOrder)
+	//r.GET("/orders", orderController.GetOrder)
 
+	authorized := r.Group("/")
+	authorized.Use(keycloakMiddleware.MiddlewareFunc())
+	{
+		authorized.POST("/orders", orderController.CreateOrder)
+		authorized.PUT("/orders", orderController.UpdateOrder)
+		authorized.GET("/orders", orderController.GetOrder)
+	}
+	r.POST("/auth/token", authController.GetToken)
 	// Swagger route
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	// Run the server on port 8080
